// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleModeReducer toggles the value 1`] = `
Object {
  "store": Object {
    "mode": true,
  },
}
`;

exports[`ToggleModeReducer toggles the value 2`] = `
Object {
  "store": Object {
    "mode": false,
  },
}
`;

exports[`ToggleModeReducer will toggle off the defaultModeValue 1`] = `
Object {
  "construct": Object {
    "defaultModeValue": true,
  },
  "store": Object {
    "mode": false,
  },
}
`;
